EXTRA_DIST         = basic.sh bridge.sh dyn.sh expire.sh ipv6.sh include.sh
EXTRA_DIST        += isolated.sh join.sh joinlen.sh lib.sh multi.sh reload.sh
EXTRA_DIST        += poison.sh reload6.sh vlan.sh
CLEANFILES         = *~ *.trs *.log
TEST_EXTENSIONS    = .sh
TESTS_ENVIRONMENT  = unshare -mrun

TESTS              = basic.sh
TESTS             += bridge.sh
TESTS             += dyn.sh
TESTS             += expire.sh
TESTS             += include.sh
TESTS             += ipv6.sh
TESTS             += isolated.sh
TESTS             += join.sh
TESTS             += joinlen.sh
TESTS             += multi.sh
TESTS             += poison.sh
TESTS             += reload.sh
TESTS             += reload6.sh
TESTS             += vlan.sh
