EXTRA_DIST         = basic.sh bridge.sh dyn.sh expire.sh gre.sh ipv6.sh include.sh
EXTRA_DIST        += isolated.sh join.sh joinlen.sh lib.sh multi.sh reload.sh
EXTRA_DIST        += poison.sh reload6.sh vlan.sh vrfy.sh
CLEANFILES         = *~ *.trs *.log
TEST_EXTENSIONS    = .sh
TESTS_ENVIRONMENT  = unshare -mrun

TESTS              = expire.sh
TESTS             += basic.sh
TESTS             += bridge.sh
TESTS             += dyn.sh
TESTS             += gre.sh
TESTS             += include.sh
TESTS             += ipv6.sh
TESTS             += isolated.sh
TESTS             += join.sh
TESTS             += joinlen.sh
TESTS             += multi.sh
TESTS             += poison.sh
TESTS             += reload.sh
TESTS             += reload6.sh
TESTS             += vlan.sh
TESTS             += vrfy.sh
