EXTRA_DIST         = adv.sh basic.sh batch.sh bridge.sh dyn.sh expire.sh gre.sh ipv6.sh
EXTRA_DIST        += include.sh isolated.sh join.sh joinlen.sh json.sh lib.sh
EXTRA_DIST        += lost.sh multi.sh mem.sh mrcache.sh mrdisc.sh pending.sh
EXTRA_DIST        += poison.sh reload.sh reload6.sh vlan.sh vrfy.sh
CLEANFILES         = *~ *.trs *.log
TEST_EXTENSIONS    = .sh
TESTS_ENVIRONMENT  = unshare -mrun --map-auto

TESTS              = expire.sh
TESTS             += adv.sh
TESTS             += basic.sh
TESTS             += batch.sh
TESTS             += bridge.sh
TESTS             += dyn.sh
TESTS             += gre.sh
TESTS             += include.sh
TESTS             += ipv6.sh
TESTS             += isolated.sh
TESTS             += join.sh
TESTS             += joinlen.sh
TESTS             += json.sh
TESTS             += lost.sh
TESTS             += mem.sh
TESTS             += mrcache.sh
TESTS             += mrdisc.sh
TESTS             += multi.sh
TESTS             += pending.sh
TESTS             += poison.sh
TESTS             += reload.sh
TESTS             += reload6.sh
TESTS             += vlan.sh
TESTS             += vrfy.sh
